tests/ui/typeck/tag-that-dare-not-speak-its-name.stderr
error[E0308]: mismatched types
  --> $DIR/tag-that-dare-not-speak-its-name.rs:11:20
   |
LL |     let x : char = last(y);
   |             ----   ^^^^^^^ expected `char`, found `Option<_>`
   |             |
   |             expected due to this
   |
   = note: expected type `char`
              found enum `Option<_>`
note: the function last is defined here
  --> $DIR/tag-that-dare-not-speak-its-name.rs:5:1
   |
LL | fn last<T>(v: Vec<&T> ) -> std::option::Option<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: consider using `Option::expect` to unwrap the `Option<_>` value, panicking if the value is an `Option::None`
   |
LL |     let x : char = last(y).expect("REASON");
   |                           +++++++++++++++++
help: consider changing last's return type
   |
LL | fn last<T>(v: Vec<&T> ) -> char {
   |                            ~~~~

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
